Change sbt runner.